--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.github.fracpete</groupId>
   <artifactId>rmspe-weka-package</artifactId>
-  <version>2021.3.12-SNAPSHOT</version>
+  <version>2021.3.12</version>
   <packaging>jar</packaging>
 
   <name>rmspe</name>
